12-kuber-5/manifests/ingress_nm.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-microk8s
  labels:
    app: nginx-ingress-microk8s
  annotations:
  #  kubernetes.io/ingress.class: public
  #   # namespace: ingress
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
spec:
  rules:
  - host: atman-v
    http: 
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              #name: nginx-port
              number:  9001
      - path: "/api"
        pathType: Prefix
        backend:
          service:
            name: multy-svc
            port:
              #name: http-port
              number: 9002    
  ingressClassName: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: ingress
  namespace: ingress
spec:
  selector:
    name: nginx-ingress-microk8s
  type: LoadBalancer
  # loadBalancerIP: 192.168.1.3
  ports:
    - name: nginx-port
      protocol: TCP
      port: 9001
      targetPort: 80
    - name: http-port
      protocol: TCP
      port: 9002
      targetPort: 1180
